--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -18,7 +18,7 @@
         "tech":"Tecnologias con las que trabajo"
     },
     "home":{
-        "title":"Desarrolador Front-End",
+        "title":"Desarrollador Front-End",
         "description":"Poseo 2 años de experiencia construyendo y diseñando software. Actualmente me encanta trabajar en aplicaciones Web utilizando tecnologias como Html, Css, JS, React, Bootstraps, Tailwind, entre otras."
     },
     "navbar":{
