--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,8 +1,8 @@
 {
     "about": {
         "about": "Sobre Mi",
-        "p1": "Soy una persona con ambicion de conocimiento y aprendizaje, con actitud y etica de trabajo. Gracias a las diferentes habilidades que fui adquiriendo con tiempo y esfuerzo, logre posicionarme como Desarrollador FrontEnd, trabajando con HTML, CSS, Sass, NodeJs, JavaScript y React. Busco seguir aprendiendo y creciendo en el campo de la programacion, para participar y contribuir en nuevos proyectos y retos. Actualmente estoy estudiando BackEnd, MERN Stack (MongoDB - Express - React - NodeJs).",
-        "p2":"Poseo algunos conocimientos extras de Informatica, WordPress, Herramientas Office, entre otros. Tambien manejo Photoshop, el cual ayuda mucho para diseños, logos o edicion de imagenes que luego utilizo en proyectos."
+        "p1": "Soy una persona con ambicion de conocimiento y aprendizaje, con actitud y etica de trabajo. Gracias a las diferentes habilidades que fui adquiriendo con tiempo y esfuerzo, logre posicionarme como Desarrollador FrontEnd, trabajando con HTML, CSS, Sass, NodeJs, JavaScript, Bootstraps, Tailwind y React. Manejo completo de Git y GitHub. Busco seguir aprendiendo y creciendo en el campo de la programacion, para participar y contribuir en nuevos proyectos y retos. Actualmente estoy estudiando BackEnd, MERN Stack (MongoDB - Express - React - NodeJs).",
+        "p2":"Poseo conocimientos extras de Informatica, WordPress, Herramientas Office, manejo de Photoshop, para diseños, logos o ediciones que utilizo en proyectos."
         
     },
     "contact":{
