--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,8 +1,8 @@
 {
     "about": {
         "about": "About",
-        "p1": "I am a person with ambition knowledge and learning, with attitude positive and work ethic. Thanks to the different abilities that I was acquiring with time and effort, I position as FrontEnd Developer working with HTML, CSS, Sass, NodeJs, JavaScript, Bootstraps, Tailwind and React. Work with Git and GitHub. I seek to continue learning and growing in the field of programming, being able to participate and contribute to new projects and challenges. I am currently studying BackEnd stack MERN (Mongo Db - Express - React - NodeJs).",
-        "p2":"I have extra knowledge of Computer Science, WordPress, Office Tools, management of Photoshop, for designs and editions of images in projects."
+        "p1": "I am from Cordoba, Argentina. I consider myself a person with ambition for knowledge and learning, with an attitude and work ethic. Thanks to the different skills that I acquired with time and effort, I managed to position myself as a FrontEnd Developer. My greatest motivation is to continue learning and growing in the field of programming, to participate and contribute to new projects and challenges. I am passionate about programming and everything that can be achieved from code. I am currently studying BackEnd, MERN Stack (MongoDB - Express - React - NodeJs).",
+        "p2":"I have knowledge of software and hardware, Office Tools, Photoshop, among others."
         
     },
     "contact":{
@@ -19,7 +19,7 @@
     },
     "home":{
         "title":"Front-End Developer",
-        "description":"I have 2 years of experience building and desgining software. Currently, i love to work on web application using technologies like Html, CSS, JS, React, Bootstraps, Tailwind."
+        "description":"I have 3 years of experience designing and developing software. I love working on complete Web applications, using HTML, CSS, JavaScript and React, accompanied by frameworks and Tools such as Bootstraps, Tailwind and more."
     },
     "navbar":{
         "home":"home",
