--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,8 +1,8 @@
 {
     "about": {
         "about": "Sobre Mi",
-        "p1": "Soy de Cordoba, Argentina. Me considero una persona con ambicion de conocimiento y aprendizaje, con actitud y etica de trabajo. Gracias a las diferentes habilidades que fui adquiriendo con tiempo y esfuerzo, logre posicionarme como Desarrollador FrontEnd. Mi mayor motivacion es seguir aprendiendo y creciendo en el campo de la programacion, para participar y contribuir en nuevos proyectos y retos. Me apasiona la programacion y todo lo que se puede lograr a partir del codigo. Actualmente estoy estudiando BackEnd, MERN Stack (MongoDB - Express - React - NodeJs).",
-        "p2":"Poseo conocimientos de sofwate y hardware, Herramientas Office, Photoshop, entre otros."
+        "p1": "Soy de Cordoba, Argentina. Me considero una persona con ambicion de conocimiento y aprendizaje, con actitud y etica de trabajo. Gracias a las diferentes habilidades que fui adquiriendo con tiempo y esfuerzo, logre posicionarme como Desarrollador FrontEnd. Mi mayor motivacion es seguir aprendiendo y creciendo en el campo de la programacion, para participar y contribuir en nuevos proyectos y retos. Me apasiona la programacion y todo lo que se puede lograr a partir del codigo. Actualmente estoy estudiando BackEnd, MERN Stack (MongoDB - Express - React - NodeJs)."
+        
         
     },
     "contact":{
@@ -19,13 +19,14 @@
     },
     "home":{
         "title":"Desarrollador Front-End",
-        "description":"Poseo 3 años de experiencia diseñando y desarrollando software. Me encanta trabajar en aplicaciones Web completas, utilizando HTML, CSS, JavaScript y React, acompañado de frameworks y Herramientas como Bootstraps, Tailwind y mas."
+        "description":"Poseo 3 años de experiencia diseñando y desarrollando software. Me encanta trabajar en aplicaciones Web completas, utilizando HTML, CSS, JavaScript y React, acompañado de frameworks y Herramientas como Bootstraps, Tailwind y mas. Actualmente estoy terminando la carrera de BackEnd para completar mi formacion Full Stack."
     },
     "navbar":{
         "home":"Inicio",
         "about":"Sobre Mi",
         "experience":"Experiencia",
         "contact":"Contactame",
+        "cv":"CV",
         "lng":"en",
         "lng2":"En"
     },
