--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -19,7 +19,7 @@
     },
     "home":{
         "title":"Front-End Developer",
-        "description":"I have 3 years of experience designing and developing software. I love working on complete Web applications, using HTML, CSS, JavaScript and React, accompanied by frameworks and Tools such as Bootstraps, Tailwind and more."
+        "description":"I have experience designing and developing software. I love working on complete Web applications, using HTML, CSS, JavaScript and React, accompanied by frameworks and Tools such as Bootstraps, Tailwind and more."
     },
     "navbar":{
         "home":"home",
